# gaussian_elimintation

./: .gitignore  Helper.h  LUdecomposition.cpp  Matrix.cpp  Matrix.h  README.md  Reparametrization.cpp  Reparametrization.h  Spline.cpp  Spline.h  gauss_elimination.cpp  generate_data.py  main.cpp  meson.build  meson_options.txt  reference.m
old_files/: Spline.cpp  Spline.h  common.cpp  common.h  gauss_elimination.cpp  generate_data.py
programs/reparametrization/: main.cpp
python_prototype/: Householder_QR_example.py
test_data/: path_input.txt  plot_bezier_curve.py  plot_cubic_spline.py  spline_interp_natural.txt
tests/: testCholesky.cpp  testDeterminant.cpp  testEigensystem.cpp  testGramSchmidt.cpp  testHouseholderQR.cpp  testInterpolation.cpp  testInverse.cpp  testLU.cpp  testLinearSolver.cpp  testMatrices.h  testQREigen.cpp  testReparametrization.cpp  testSVD.cpp
